--- a/src/pages/events/2020-03-03-aarsmote.md
+++ b/src/pages/events/2020-03-03-aarsmote.md
@@ -10,9 +10,25 @@ tags:
   - Vassoynytt
 ---
 
-Nytt styre vil bli valgt på årsmøtet 3. mars klokka 18 på Vassøystua. Alle som bor på Vassøy er velkomne. Medlemmer i beboerforeningen har stemmerett. Vi kommer blant annet til å ta opp hvordan vi kan støtte ambulansebilen. 
-
+Nytt styre vil bli valgt på årsmøtet 3. mars klokka 18 på Vassøystua. Alle som bor på Vassøy er velkomne. 
 Saker som et medlem ønsker behandlet på årsmøtet, må sendes styret via [styret@vassoy.org](mailto:styret@vassoy.org)
+
+**Agenda**
+- Oppstart
+- Årsberetning
+- Regnskap
+- Innkomne forslag. Send forslag til: [styret@vassoy.org](mailto:styret@vassoy.org) innen 14. Februar.
+- Budsjett og planer for 2020
+- Valg
+
+Årsmøtet er åpent for alle på Vassøy. Velkommen!
+
+## Temamøte
+
+Vassøystua tirsdag 3.3 kl. 19.00
+
+Etter årsmøtet kommer nestleder Leif Kjetil Knudsen fra Storhaug kommunedelsutvalg (tidligere bydelsutvalg) og orienterer om saker som er aktuelle for oss.
+
 
 
 
