--- a/src/pages/aktuelt/2021-02-08-aarsmote-2021.md
+++ b/src/pages/aktuelt/2021-02-08-aarsmote-2021.md
@@ -29,3 +29,11 @@ Det er noen ledige plasser i styret, og vi oppfordrer deg som er interessert til
 Signe Egenberg eller David Pelosof i valgkomiten, Det er også mulig å komme med forslag på
 kandidater.
 
+## Åpent møte om hurtigbåtruter
+
+Etter årsmøtet, klokka 19, kommer Alexander Rüdiger-Raustein, som er leder av fylkets
+samferdselsutvalg. Han vil orientere om rutekutt på hurtigbåtene, hvordan prosessen har vært og
+hvordan den vil gå videre. Alle er velkomne til å stille spørsmål og delta i diskusjon.
+
+Vi ber også her deltakerne om å melde seg på så avgjør vi hvordan møtet skal avvikles når vi ser
+hvilke retningslinjer som gjelder. Sannsynligvis blir det mange som må ta det som et digitalt møte.
