--- a/src/pages/aktuelt/2021-02-08-aarsmote-2021.md
+++ b/src/pages/aktuelt/2021-02-08-aarsmote-2021.md
@@ -3,7 +3,7 @@ templateKey: aktuelt-post
 title: Innkalling til årsmøte
 date: 2021-02-08T20:00:00.000Z
 description: Tirsdag 9.mars arrangeres årsmøte i Vassøystua klokka 18.
-image: /img/vassoynytt2020-2.jpg
+image: /img/abstract.jpg
 tags:
   - Vassoynytt
 ---
